tests/functional/data/transpiler/common/errors/shared/shared_not_between_outer_inner.err
shared_not_between_outer_inner.cpp:2:5: error: Must define [@shared] variables between [@outer] and [@inner] loops
    2 |     @shared int shm[10];
      |     ^
